--- a/styles.css
+++ b/styles.css
@@ -54,42 +54,21 @@ body{
     margin-right: auto;
     margin-top: auto;
     animation: sak 3s forwards;
-  }
-  @keyframes sak{
-    
-    from{
-    max-width: 1000px;
-    max-height: 3000px;
-    }
-    to{
-        width: 100%;
-        height: 100%;
-    }
 }
-hr{
-  background-color: rgb(0, 0, 0);
-  height: 1px;
-}
-.card{
+.foot{
   background-color: inherit;
 }
-.wine{
-  max-width: 600px;
-  min-width: 400px;
-}
-.active{
-  background: rgba(0, 0, 0, 0.348);
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-style: double;
-}
-
-
 article{
-  background-color: rgb(30, 39, 48);
   margin: 20px;
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
   border-bottom-left-radius: 100px;
   border-bottom-right-radius: 100px;
+  width: 20rem;
+}
+.card{
+  background-color: inherit;
+}
+.done{
+  background-color: rgb(30, 39, 48);
 }
