--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(#acd42b, #26a9bd, #04102c);
+    background-image: linear-gradient(#393E41, #3B5249, #030b1f);
     min-height: 100vh;
     color: white;
 }
